--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.4",
+    "react-css-modules": "^4.7.11",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
